--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,11 @@ Package: tidyTX
 Type: Package
 Title: Tidy Text Analytics
 Version: 0.1.0
-Author: Simon Roth
-Maintainer: me
-Description: More about what it does.
-License: No warrenties at all. 
+Author: Who wrote it
+Maintainer: Simon Roth <sy-ro@gmx.net>
+Description: More about what it does (maybe more than one line)
+    Use four spaces when indenting paragraphs within the Description.
+License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
