--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,5 +19,6 @@ export(tx_replace_punc)
 export(tx_replace_str)
 export(tx_replace_twitter)
 export(tx_replace_url)
+export(tx_sent)
 export(tx_spacing)
 export(tx_text_to_seq)
